# Claire-Speech-Engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claire_cli.py  conftest.py  cse.py  interactive_fish.py  interactive_kokoro.py  memory.md  pyproject.toml  requirements.txt  update.md
benchmarks/: test_acoustic_backend.py  test_api_engine.py  test_audio_streaming.py  test_cir.py  test_cli.py  test_import_time.py  test_kokoro_backend.py  test_memory.py  test_perf_compiler.py  test_startup.py  test_voice_package.py  test_voice_runtime.py
configs/: default.yaml
docs/ADRs/: ADR-001.md  ADR-002.md
docs/Architecture/: ARCHITECTURE.md  CPE-000.md
docs/Backends/: README.md
docs/Benchmarks/: README.md
docs/Constitution/: constitution.md
docs/Lexicon/: lexicon.md
docs/Notebooks/: COLAB-001.ipynb  COLAB-001.md
docs/PRDs/: PPRD-013.5.md  PRD-001.md  PRD-002.md  PRD-003.md  PRD-004.md  PRD-005.md  PRD-006.md  PRD-007.md  PRD-008.md  PRD-009.md  PRD-010.md  PRD-011.md  PRD-012.md  PRD-013.6.md  PRD-013.md  PRD-014.md  PRD-015.md  PRD-016.md  PRD-017.md  PRD-018.md  PRD-019.md  PRD-020.md  PRD-021.md  PRD-022.md  PRD-023.md  PRD-024.md  PRD-025.md
docs/PVDs/: PVD-001.md
docs/RFDs/: RFD-000.md  RFD-001.md
docs/releases/: RELEASE-001.md  RELEASE-002.md
docs/reports/: PER-001.md
evaluation/: compare.py
evaluation/prompts/: standard.txt
examples/: basic.py  configuration.py  generate_speech.py  list_voices.py  test_both_backends.py
src/cse/: __init__.py
src/cse/_scaffold/: README.md  __init__.py  example_fishspeech.py  example_kokoro.py  example_styletts2.py
src/cse/api/: README.md  __init__.py  config.py  engine.py  exceptions.py  lifecycle.py
src/cse/backends/: __init__.py
src/cse/cli/: README.md  __init__.py  commands.py  main.py  parser.py
src/cse/config/: __init__.py  manager.py  user_config.py
src/cse/core/: __init__.py  logger.py  registry.py
src/cse/language/: __init__.py
tests/: __init__.py  test_acoustic_dummy.py  test_acoustic_exceptions.py  test_acoustic_manager.py  test_acoustic_registry.py  test_api_engine.py  test_audio_buffer.py  test_audio_controller.py  test_audio_frame.py  test_audio_serializer.py  test_audio_stream.py  test_backend_validation.py  test_bootstrap.py  test_cir_api.py  test_cir_builder.py  test_cir_exceptions.py  test_cir_ids.py  test_cir_schema.py  test_cir_serializer.py  test_cir_validator.py  test_cli.py  test_config.py  test_evaluation_backends.py  test_kokoro_backend.py  test_logger.py  test_packaging.py  test_perf_compiler.py  test_perf_context.py  test_perf_exceptions.py  test_perf_graph.py  test_perf_integration.py  test_perf_intent.py  test_perf_meaning.py  test_perf_pipeline.py  test_perf_planning.py  test_perf_representation.py  test_perf_schema.py  test_perf_serializer.py  test_perf_translator.py  test_perf_validator.py  (+9 more)
tests/golden/: test_perf_golden.py
(+94 files in other folders)
