[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claire-speech-engine"
version = "0.1.0"
description = "Claire Speech Engine — production-grade speech synthesis foundation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "onnxruntime",
    "sounddevice",
    "soundfile",
    "pyyaml",
    "rich",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
